# artha

./: .claudeignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: HANDBOOK.md  PROJECT_PLAN.md  RUNBOOK.md  SYSTEM_OVERVIEW.md  TRACK_B_PLAN.md  TRACK_C_PLAN.md  TRACK_D_PLAN.md  TRACK_E_PLAN.md  TRACK_G_PLAN.md  TRACK_H_PLAN.md
docs/decisions/: 0001-p0-scaffold.md  0002-bhavcopy-format-map.md  0003-adjustment-from-implied-factors.md  0004-pit-universe-from-liquidity-filters.md  0005-hybrid-ca-adjustment.md  0006-track-c-research-v2.md  0007-track-d-single-name.md  0008-ship-minvar-construction.md  0009-track-e-adaptive.md  0010-wrapup-f-c7-posttax.md  (+3 more)
scripts/: artha_daily.cmd  artha_heartbeat.cmd  artha_monthly.cmd  artha_quarterly.cmd  artha_weekly.cmd  backfill_bhavcopy.py  backfill_ca.py  backfill_events.py  backfill_fo.py  backfill_gdelt.py  backfill_indexclose.py  build_benchmarks.py  build_curated.py  build_events.py  build_site.py  collect_news.py  kite_login.py  make_spotcheck_fixture.py  register_tasks.ps1  run_baselines.py  run_c7_blend.py  run_c7_validation.py  run_construction_v2.py  run_d2_preprocess.py  run_d3_models.py  run_d4_sentiment.py  run_daily_cycle.py  run_dashboard.py  run_e1_ewma.py  run_event_alpha.py  run_h1_rl_control.py  run_heartbeat.py  run_hedge_study.py  run_incremental_test.py  run_kill_drill.py  run_live_readiness.py  run_model_study.py  run_p5.py  run_paper_day.py  run_posttax.py  (+10 more)
site/: README.md  index.html  template.html
src/artha/: config.py  (+1 more)
tests/: __init__.py
(+145 files in other folders)
