[project]
name = "artha"
version = "0.1.0"
description = "Cross-sectional ML trading system for NSE cash equities: PIT data layer, LightGBM alpha, event-driven engine, live paper trading."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3",
    "emd-signal>=1.10.0",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "lightgbm>=4.6.0",
    "polars>=1.30",
    "pydantic>=2.11",
    "pywavelets>=1.9.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "torch>=2.13.0",
    "uvicorn>=0.51.0",
    "vadersentiment>=3.3.2",
]

[dependency-groups]
dev = [
    "hypothesis>=6.100",
    "mypy>=1.16",
    "pre-commit>=4.2",
    "pytest>=8.4",
    "ruff>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "C4",  # comprehensions
    "SIM", # simplify
    "PT",  # pytest style
    "RUF", # ruff-specific
]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "tests"]
pretty = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "scipy.*", "pywt", "PyEMD"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
